Добавлен номер телефона

--- a/index.html
+++ b/index.html
@@ -87,17 +87,18 @@
   </section>
 
   <!-- Контакты -->
-  <section id="contact" class="section">
-    <div class="container">
-      <h2>Связаться со мной</h2>
-      <p>Готов к стажировкам и junior-позициям в веб-разработке. Интересуюсь full-stack и backend-направлениями.</p>
-      <div class="contact-links">
-        <a href="https://samara.hh.ru/resume/93108978ff0c09ea750039ed1f79654555566d?hhtmFrom=resume_list" target="_blank">Резюме на HH</a>
-        <a href="https://github.com/Carraigh" target="_blank">GitHub</a>
-        <a href="mailto:vshpagin777@gmail.com">Email</a>
-      </div>
+<section id="contact" class="section">
+  <div class="container">
+    <h2>Связаться со мной</h2>
+    <p>Готов к стажировкам и junior-позициям в веб-разработке. Интересуюсь full-stack и backend-направлениями.</p>
+    <div class="contact-links">
+      <a href="https://samara.hh.ru/resume/93108978ff0c09ea750039ed1f79654555566d?hhtmFrom=resume_list" target="_blank">Резюме на HH</a>
+      <a href="https://github.com/Carraigh" target="_blank">GitHub</a>
+      <a href="mailto:vshpagin777@gmail.com">vshpagin777@gmail.com</a>
+      <a href="tel:+79397571976">+7 939 757 1976</a>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Подвал -->
   <footer>
