--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Портфолио full-stack разработчика Шпагина Валерия. Проекты на HTML, CSS, JavaScript, Node.js, Go и SQL. Готов к стажировкам и первой работе." />
+  <meta name="description" content="Портфолио backend-разработчика и автоматизатора юридических процессов Шпагина Валерия. Проекты на Python, OCR, анализ договоров, обработка первички." />
   <title>Моё портфолио</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
@@ -14,7 +14,10 @@
     <div class="container">
       <img src="assets/avatar.jpg" alt="Фото Валерия Шпагина" class="avatar" style="width: 120px; height: 120px; border-radius: 50%; margin: 10px auto; display: block; border: 3px solid white;">
       <h1>Привет, я <span>Шпагин Валерий Александрович</span></h1>
-      <p>Frontend-разработчик с уклоном в бэкенд и данные | Создаю веб-приложения с нуля</p>
+      <p>
+      Backend-разработчик и автоматизатор юридических и бухгалтерских процессов<br>
+      Создаю инструменты для анализа документов и автоматизации рутины
+      </p>
       <a href="#projects" class="btn">Мои проекты</a>
       <a href="#contact" class="btn btn-outline">Связаться</a>
     </div>
@@ -25,18 +28,15 @@
     <div class="container">
       <h2>Навыки</h2>
       <div class="skills-grid">
-        <div class="skill-item">HTML5</div>
-        <div class="skill-item">CSS3</div>
-        <div class="skill-item">JavaScript</div>
-        <div class="skill-item">Node.js</div>
-        <div class="skill-item">Go</div>
-        <div class="skill-item">REST API</div>
-        <div class="skill-item">PostgreSQL</div>
-        <div class="skill-item">SQL</div>
-        <div class="skill-item">Docker</div>
+        <div class="skill-item">Python</div>
+        <div class="skill-item">OCR (Tesseract)</div>
+        <div class="skill-item">Pandas / OpenPyXL</div>
+        <div class="skill-item">PDF / DOCX обработка</div>
+        <div class="skill-item">Регулярные выражения</div>
+        <div class="skill-item">Анализ текста</div>
         <div class="skill-item">Git / GitHub</div>
-        <div class="skill-item">JWT</div>
-        <div class="skill-item">Адаптивная верстка</div>
+        <div class="skill-item">Виртуальные окружения</div>
+        <div class="skill-item">Linux / Kali</div>
       </div>
     </div>
   </section>
@@ -82,23 +82,41 @@
             <a href="https://github.com/Carraigh/sql-analytics" target="_blank">GitHub</a>
           </div>
         </div>
+
+        <!-- Invoice Processor -->
+        <div class="project-card">
+          <h3>Invoice Processor</h3>
+          <p>Инструмент на Python для автоматической обработки счетов-фактур, актов и накладных (PDF/сканы) → Excel.</p>
+          <div class="project-links">
+            <a href="https://github.com/Carraigh/invoice-processor" target="_blank">GitHub</a>
+          </div>
+        </div>
+
+        <!-- Legal Contract Analyzer -->
+        <div class="project-card">
+          <h3>Legal Contract Analyzer</h3>
+          <p>Анализ юридических рисков в договорах: автопролонгация, неограниченная ответственность, отсутствие срока.</p>
+          <div class="project-links">
+            <a href="https://github.com/Carraigh/legal-contract-analyzer" target="_blank">GitHub</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
 
   <!-- Контакты -->
-<section id="contact" class="section">
-  <div class="container">
-    <h2>Связаться со мной</h2>
-    <p>Готов к стажировкам и junior-позициям в веб-разработке. Интересуюсь full-stack и backend-направлениями.</p>
-    <div class="contact-links">
-      <a href="https://samara.hh.ru/resume/93108978ff0c09ea750039ed1f79654555566d?hhtmFrom=resume_list" target="_blank">Резюме на HH</a>
-      <a href="https://github.com/Carraigh" target="_blank">GitHub</a>
-      <a href="mailto:vshpagin777@gmail.com">vshpagin777@gmail.com</a>
-      <a href="tel:+79397571976">+7 939 757 1976</a>
+  <section id="contact" class="section">
+    <div class="container">
+      <h2>Связаться со мной</h2>
+      <p>Готов к стажировкам и junior-позициям в направлениях: бэкенд, анализ данных, автоматизация бизнес-процессов.</p>
+      <div class="contact-links">
+        <a href="https://samara.hh.ru/resume/1137309cff0c47bd7b0039ed1f6a706755634e" target="_blank">Резюме на HH</a>
+        <a href="https://github.com/Carraigh" target="_blank">GitHub</a>
+        <a href="mailto:vshpagin777@gmail.com">vshpagin777@gmail.com</a>
+        <a href="tel:+79397571976">+7 939 757 1976</a>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- Подвал -->
   <footer>
