Добавлен веб-интерфейс в проекты invoice-processor и legal-contract-analyzer

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <img src="assets/avatar.jpg" alt="Фото Валерия Шпагина" class="avatar" style="width: 120px; height: 120px; border-radius: 50%; margin: 10px auto; display: block; border: 3px solid white;">
       <h1>Привет, я <span>Шпагин Валерий Александрович</span></h1>
       <p>
-      Backend-разработчик и автоматизатор юридических и бухгалтерских процессов<br>
-      Создаю инструменты для анализа документов и автоматизации рутины
+        Full-stack разработчик с опытом в создании веб-приложений, API, систем автоматизации и обработки данных<br>
+        Готов решать разнообразные задачи — от прототипа до работающего сервиса
       </p>
       <a href="#projects" class="btn">Мои проекты</a>
       <a href="#contact" class="btn btn-outline">Связаться</a>
@@ -52,7 +52,6 @@
           <p>Веб-приложение для управления задачами на чистом JavaScript с сохранением в localStorage.</p>
           <div class="project-links">
             <a href="https://github.com/Carraigh/todo-app" target="_blank">GitHub</a>
-            <a href="https://Carraigh.github.io/todo-app" target="_blank">Демо</a>
           </div>
         </div>
 
@@ -86,7 +85,8 @@
         <!-- Invoice Processor -->
         <div class="project-card">
           <h3>Invoice Processor</h3>
-          <p>Инструмент на Python для автоматической обработки счетов-фактур, актов и накладных (PDF/сканы) → Excel.</p>
+          <p>Веб-инструмент на Python (FastAPI) для автоматической обработки счетов-фактур, актов и накладных. 
+             Загрузка PDF/сканов, OCR, парсинг и выгрузка в Excel. Реализован веб-интерфейс и REST API.</p>
           <div class="project-links">
             <a href="https://github.com/Carraigh/invoice-processor" target="_blank">GitHub</a>
           </div>
@@ -95,7 +95,9 @@
         <!-- Legal Contract Analyzer -->
         <div class="project-card">
           <h3>Legal Contract Analyzer</h3>
-          <p>Анализ юридических рисков в договорах: автопролонгация, неограниченная ответственность, отсутствие срока.</p>
+          <p>Веб-инструмент на Python (FastAPI) для анализа юридических рисков в договорах. 
+             Поддержка PDF и DOCX, выявление автопролонгации, неограниченной ответственности и других рисков. 
+             Отчёт в Excel и веб-интерфейс.</p>
           <div class="project-links">
             <a href="https://github.com/Carraigh/legal-contract-analyzer" target="_blank">GitHub</a>
           </div>
