Добавлен проект: Telegram Region Bot с двумя кнопками

--- a/index.html
+++ b/index.html
@@ -132,6 +132,19 @@
             <a href="https://github.com/Carraigh/log-sentinel" target="_blank">GitHub</a>
           </div>
         </div>
+
+        <!-- Telegram Region Bot -->
+        <div class="project-card">
+          <h3>Telegram Region Bot</h3>
+          <p>Telegram-бот для поиска региона по коду (например, 77) или по названию (москва, самар). 
+             Поддерживает все регионы России, включая исторические и специальные коды. 
+             Реализован на Python с использованием python-telegram-bot, dotenv и polling-режима. 
+             Развернут на PythonAnywhere с автозапуском.</p>
+          <div class="project-links">
+            <a href="https://t.me/CodRegion_bot" target="_blank">Попробовать</a>
+            <a href="https://github.com/Carraigh/telegram-bot-region" target="_blank">GitHub</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
