Добавлены боты: FirstTarotBot, penal_code_bot и сайт designer-editor

--- a/index.html
+++ b/index.html
@@ -145,6 +145,42 @@
             <a href="https://github.com/Carraigh/telegram-bot-region" target="_blank">GitHub</a>
           </div>
         </div>
+
+        <!-- First Tarot Bot -->
+        <div class="project-card">
+          <h3>First Tarot Bot</h3>
+          <p>Telegram-бот для гадания на картах Таро. Позволяет выбрать расклад (одна карта, три карты, кельтский крест) 
+             и получает интерпретацию. Реализован на Python с использованием python-telegram-bot и polling-режима. 
+             Развернут на PythonAnywhere с автозапуском.</p>
+          <div class="project-links">
+            <a href="https://t.me/FirstTarotBot" target="_blank">Попробовать</a>
+            <a href="https://github.com/Carraigh/tarot_bot" target="_blank">GitHub</a>
+          </div>
+        </div>
+
+        <!-- Penal Code Bot -->
+        <div class="project-card">
+          <h3>Penal Code Bot</h3>
+          <p>Telegram-бот для поиска статей Уголовного кодекса РФ по номеру или ключевым словам. 
+             Удобен для юристов и студентов. Реализован на Python, использует python-telegram-bot и базу данных статей. 
+             Развернут на PythonAnywhere с автозапуском.</p>
+          <div class="project-links">
+            <a href="https://t.me/penal_code_bot" target="_blank">Попробовать</a>
+            <a href="https://github.com/Carraigh/penal-code-bot" target="_blank">GitHub</a>
+          </div>
+        </div>
+
+        <!-- Designer Editor -->
+        <div class="project-card">
+          <h3>Designer Editor</h3>
+          <p>Мини-редактор интерфейсов с возможностью создания и стилизации элементов (кнопки, блоки). 
+             Реализован на чистом HTML, CSS и JavaScript. Поддерживает drag-and-drop, изменение размеров и стилей. 
+             Размещён на GitHub Pages — доступен онлайн.</p>
+          <div class="project-links">
+            <a href="https://carraigh.github.io/designer-editor/" target="_blank">Попробовать</a>
+            <a href="https://github.com/Carraigh/designer-editor" target="_blank">GitHub</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
