feat: Add C++ to skills, remove Culinary Blog

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <h2>Навыки</h2>
       <div class="skills-grid">
         <div class="skill-item">Python</div>
+        <div class="skill-item">C++</div>
         <div class="skill-item">OCR (Tesseract)</div>
         <div class="skill-item">Pandas / OpenPyXL</div>
         <div class="skill-item">PDF / DOCX обработка</div>
@@ -179,6 +180,15 @@
           <div class="project-links">
             <a href="https://carraigh.github.io/designer-editor/" target="_blank">Попробовать</a>
             <a href="https://github.com/Carraigh/designer-editor" target="_blank">GitHub</a>
+          </div>
+        </div>
+
+        <!-- MiniRay -->
+        <div class="project-card">
+          <h3>MiniRay: Minimal Ray Tracer</h3>
+          <p>Реализация ray tracing с нуля на C++ по книге Peter Shirley. Рендерит сферы с реалистичным освещением, тенями и отражениями. Использует только STL и CMake — без внешних библиотек.</p>
+          <div class="project-links">
+            <a href="https://github.com/Carraigh/MiniRay" target="_blank">GitHub</a>
           </div>
         </div>
       </div>
