✨ Добавлен проект codexfuse в портфолио (первым в списке)

--- a/index.html
+++ b/index.html
@@ -47,6 +47,16 @@
     <div class="container">
       <h2>Проекты</h2>
       <div class="projects-grid">
+
+        <!-- codexfuse -->
+        <div class="project-card">
+          <h3>codexfuse</h3>
+          <p>CLI-инструмент на Python для сборки всего проекта в один файл — идеально для передачи в ChatGPT, Claude или ревью. Поддерживает .gitignore, кастомные конфиги, форматы (llm/markdown/json), цветной вывод и статистику. Полностью переработанная уникальная реализация идеи с Пикабу.</p>
+          <div class="project-links">
+            <a href="https://github.com/Carraigh/codexfuse" target="_blank">GitHub</a>
+          </div>
+        </div>
+
         <!-- To-Do App -->
         <div class="project-card">
           <h3>To-Do List</h3>
@@ -191,6 +201,7 @@
             <a href="https://github.com/Carraigh/MiniRay" target="_blank">GitHub</a>
           </div>
         </div>
+
       </div>
     </div>
   </section>
