✨ Добавлен проект price-scraper-cpp в портфолио

--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
           </div>
         </div>
 
+        <!-- price-scraper-cpp -->
+        <div class="project-card">
+          <h3>price-scraper-cpp</h3>
+          <p>Консольный парсер цен с сайта магазина на C++. Использует libcurl, std::regex, сохраняет в CSV. Собирается и запускается через Docker — без установки зависимостей в систему. Создан специально для демонстрации владения C++ и навыков парсинга в соответствии с требованиями вакансии.</p>
+          <div class="project-links">
+            <a href="https://github.com/Carraigh/price-scraper-cpp" target="_blank">GitHub</a>
+          </div>
+        </div>
+
         <!-- To-Do App -->
         <div class="project-card">
           <h3>To-Do List</h3>
